--- a/assignments/homework_4/dev/scss/styles.scss
+++ b/assignments/homework_4/dev/scss/styles.scss
@@ -11,4 +11,5 @@
 
 @import 'components/_header';
 @import 'components/_main-content';
+@import 'components/_author';
 @import 'components/_footer';
