--- a/assignments/homework_4/dev/scss/components/_author.scss
+++ b/assignments/homework_4/dev/scss/components/_author.scss
@@ -1,8 +1,8 @@
-.header{
-    background-color: $dark-blue;
+.author{
+    background-color: $purple;
     color: $white;
     text-align: center;
     padding-top: 50px;
     padding-bottom: 50px;
-    grid-column:span 4;
+    grid-column:span 3;
 }
