--- a/assignments/homework_4/dev/scss/components/_footer.scss
+++ b/assignments/homework_4/dev/scss/components/_footer.scss
@@ -5,4 +5,13 @@
     padding-top: 50px;
     padding-bottom: 50px;
     grid-column:span 4;
+    @include sm {
+        background-color: $grey;
+    }
+    @include md {
+        background-color: $blue;
+    }
+    @include lg {
+        background-color: $red-dark;
+    }
 }
