--- a/assignments/homework_4/dev/scss/components/_main-content.scss
+++ b/assignments/homework_4/dev/scss/components/_main-content.scss
@@ -6,6 +6,15 @@
     padding-bottom: 50px;
     padding-left: 50px;
     grid-column:span 1;
+    @include sm {
+        color: $dark-blue;
+    }
+    @include md {
+        color: $red-dark;
+    }
+    @include lg {
+       color: $white;
+    }
 }
 .main-content-body{
     background-color: $grey;
@@ -13,6 +22,15 @@
     text-align: left;
     padding: 50px;
     grid-column:span 2;
+    @include sm {
+        text-align: center;
+    }
+    @include md {
+        text-align: right;
+    }
+    @include lg {
+        text-align: left;
+    }
 }
 .main-content-ads{
     background-color: $dark-blue;
@@ -22,4 +40,13 @@
     padding-bottom: 50px;
     padding-left: 50px;
     grid-column:span 1;
+    @include sm {
+        padding-top: 100px;
+    }
+    @include md {
+        padding-top: 200px;
+    }
+    @include lg {
+        padding-top: 50px;
+    }
 }
