--- a/assignments/final/dev/scss/base/_typography.scss
+++ b/assignments/final/dev/scss/base/_typography.scss
@@ -1,9 +1,5 @@
-/* =============
-    Typography
-============= */
 body {
-	font-family: 'Lato', sans-serif;
-	font-family: 'Playfair Display', serif;
+	font-family: 'Open Sans', sans-serif;
 	font-size: 16px;
 }
 
