--- a/assignments/final/dev/scss/helpers/_variables.scss
+++ b/assignments/final/dev/scss/helpers/_variables.scss
@@ -16,12 +16,12 @@ $screen-lg-min: 992px;
 $screen-xl-min: 1200px;
 
 // Colors
+$sacramento-state-green: #0A2F32;
+$cultured: #F7F9EE;
+$dark-electric-blue: #4E7276;
+$japanese-indigo: #1E4648;
+$pale-goldenrod: #DEE7B0;
+$rite-of-spring: #FFECA8;
 $white: #FFFFFF;
-$black: #000000;
-$blue: #006494;
-$dark-blue: #1B263B;
-$grey: #7799A5;
-$light-grey: #D5D5D5;
-$red: #F71735;
-$red-dark: #803841;
-$purple: #803841;
+$cultured-75: #F7F9EEBF;
+
