--- a/assignments/final/deploy/css/styles.css
+++ b/assignments/final/deploy/css/styles.css
@@ -319,7 +319,8 @@ template {
     Typography
 ============= */
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Lato', sans-serif;
+  font-family: 'Playfair Display', serif;
   font-size: 16px; }
 
 h1, h2, h3, h4, h5, h6 {
