--- a/assignments/final/dev/scss/base/_typography.scss
+++ b/assignments/final/dev/scss/base/_typography.scss
@@ -1,5 +1,9 @@
+/* =============
+    Typography
+============= */
 body {
-	font-family: 'Open Sans', sans-serif;
+	font-family: 'Lato', sans-serif;
+	font-family: 'Playfair Display', serif;
 	font-size: 16px;
 }
 
