--- a/assignments/final/dev/components/header.html
+++ b/assignments/final/dev/components/header.html
@@ -1,4 +1,4 @@
-<div class="header">
+<div>
     <img src="./img/mobile_logo.png" alt="The site logo" />
     <div>
         <a href="#">Home</a>   
