--- a/assignments/final/dev/scss/styles.scss
+++ b/assignments/final/dev/scss/styles.scss
@@ -9,4 +9,7 @@
 @import 'base/_base';
 @import 'base/_typography';
 
-@import 'components/_header';
+@import 'components/header';
+@import 'components/hero';
+@import 'components/main-content';
+@import 'components/footer'
