--- a/assignments/final/dev/scss/components/_footer.scss
+++ b/assignments/final/dev/scss/components/_footer.scss
@@ -13,7 +13,41 @@
     font-weight:100;
     line-height: 150%;
     padding-right:24px;
+    padding-bottom: 7px;
+    @include md {
+        font-size: 16px;
+    }
 }
 .pinterest {
-    padding-left: 8px;  
+    padding-left: 8px; 
+    width: 24px;
+    height:auto;
+    @include md {
+        width: 40px;
+        height: auto;
+    }
 }
+.facebook {
+    padding-left: 8px; 
+    width: 24px;
+    height:auto;
+    @include md {
+        width: 40px;
+        height: auto;}
+}
+.instagram {
+    padding-left: 8px; 
+    width: 24px;
+    height:auto; 
+    @include md {
+        width: 40px;
+        height: auto;}
+}
+.doordash {
+    padding-left: 8px; 
+    width: 24px;
+    height:auto; 
+    @include md {
+        width: 40px;
+        height: auto;}
+    }
