--- a/assignments/final/dev/scss/styles.scss
+++ b/assignments/final/dev/scss/styles.scss
@@ -12,4 +12,5 @@
 @import 'components/header';
 @import 'components/hero';
 @import 'components/main-content';
-@import 'components/footer'
+@import 'components/footer';
+@import 'components/newsletter'
