--- a/assignments/final/dev/scss/styles.scss
+++ b/assignments/final/dev/scss/styles.scss
@@ -13,4 +13,7 @@
 @import 'components/hero';
 @import 'components/main-content';
 @import 'components/footer';
-@import 'components/newsletter'
+@import 'components/newsletter';
+@import 'components/contact_hero';
+@import 'components/contact_cards';
+@import 'components/contact_bottom';
