--- a/assignments/final/dev/scss/styles.scss
+++ b/assignments/final/dev/scss/styles.scss
@@ -15,5 +15,6 @@
 @import 'components/footer';
 @import 'components/newsletter';
 @import 'components/contact_hero';
+@import 'components/_message_us.scss';
 @import 'components/contact_cards';
 @import 'components/contact_bottom';
