--- a/assignments/final/deploy/css/styles.css
+++ b/assignments/final/deploy/css/styles.css
@@ -423,9 +423,11 @@ h3, h4, h5, h6 {
   display: flex;
   flex-direction: row;
   justify-content: center;
-  padding: 15px 24px;
+  padding: 10px 24px;
   width: 192px;
   height: 56px;
+  color: #1E4648;
+  font-size: 24px;
   background: #FFECA8;
   margin: 0 auto; }
   @media (min-width: 1280px) {
@@ -437,7 +439,8 @@ h3, h4, h5, h6 {
 
 .second_bg {
   background: #F7F9EE;
-  padding-bottom: 20px; }
+  padding-bottom: 20px;
+  margin-bottom: 64px; }
 
 .looking_for {
   text-align: center;
@@ -470,7 +473,9 @@ h3, h4, h5, h6 {
   transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
   background-color: #FFECA8;
-  padding: 12px 24px; }
+  padding: 12px 24px;
+  color: #1E4648;
+  font-size: 24px; }
 
 .story_container {
   position: relative;
@@ -488,7 +493,9 @@ h3, h4, h5, h6 {
   transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
   background-color: #FFECA8;
-  padding: 12px 18px; }
+  padding: 12px 18px;
+  color: #1E4648;
+  font-size: 24px; }
 
 .resources_container {
   position: relative;
@@ -506,7 +513,9 @@ h3, h4, h5, h6 {
   transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
   background-color: #FFECA8;
-  padding: 12px 24px; }
+  padding: 12px 24px;
+  color: #1E4648;
+  font-size: 24px; }
 
 .contact_container {
   position: relative;
@@ -524,7 +533,9 @@ h3, h4, h5, h6 {
   transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
   background-color: #FFECA8;
-  padding: 12px 24px; }
+  padding: 12px 24px;
+  color: #1E4648;
+  font-size: 24px; }
 
 .questions {
   text-align: center;
@@ -585,6 +596,36 @@ h3, h4, h5, h6 {
   margin-right: auto;
   width: 360px;
   height: auto; }
+  @media (min-width: 1280px) {
+    .double_image {
+      display: none; } }
+@media (min-width: 1280px) {
+  .white_flower {
+    width: 460px;
+    height: auto;
+    padding: 16px; } }
+
+@media (min-width: 1280px) {
+  .cafe_02 {
+    width: 460px;
+    height: auto;
+    padding: 16px; } }
+
+@media (min-width: 1280px) {
+  .lily_2 {
+    width: 460px;
+    height: 460px;
+    padding: 16px; } }
+
+@media (min-width: 390px) {
+  .triple_image {
+    display: none; } }
+
+@media (min-width: 1280px) {
+  .triple_image {
+    display: flex;
+    flex-direction: row;
+    justify-content: center; } }
 
 .bottom_body {
   text-align: justify;
@@ -599,11 +640,13 @@ h3, h4, h5, h6 {
   display: flex;
   flex-direction: row;
   justify-content: center;
-  padding: 15px 24px;
+  padding: 10px 24px;
   width: 192px;
   height: 56px;
   background: #FFECA8;
-  margin: 0 auto; }
+  margin: 0 auto;
+  color: #1E4648;
+  font-size: 24px; }
   @media (min-width: 1280px) {
     .touch_button {
       width: 225px;
@@ -659,26 +702,44 @@ h3, h4, h5, h6 {
     .doordash {
       width: 40px;
       height: auto; } }
+.nl {
+  display: flex;
+  flex-direction: row;
+  justify-content: center; }
+
 .background {
   padding: 24px 32px;
   background-image: url("../img/newsletter.jpg");
   background-repeat: no-repeat;
-  background-size: cover; }
+  background-size: cover;
+  margin: 64px;
+  max-width: 830px; }
 
 .newsletter {
   padding: 45px;
   background-color: rgba(247, 249, 238, 0.75);
-  text-align: center; }
+  text-align: left; }
 
-.submit {
+.email_nl {
+  width: 270px;
+  padding: 8px;
+  margin-top: 20px;
+  margin-bottom: 20px; }
+  @media (min-width: 1280px) {
+    .email_nl {
+      width: 650px; } }
+.submit_nl {
   display: flex;
   flex-direction: row;
   justify-content: center;
+  padding-top: 4px;
   width: 100px;
   height: 30px;
   background: #FFECA8;
-  margin: 0 auto; }
-
+  margin-left: 170px; }
+  @media (min-width: 1280px) {
+    .submit_nl {
+      margin-left: 550px; } }
 .hero_contact {
   display: block;
   margin-left: auto;
@@ -694,17 +755,95 @@ h3, h4, h5, h6 {
       text-align: center;
       padding: 88px;
       font-weight: 500; } }
+.message_box {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 64px; }
+
+.message_title {
+  text-align: center;
+  padding: 32px;
+  font-weight: 300; }
+
+.message_background {
+  background: #F7F9EE;
+  padding: 16px;
+  width: 360px;
+  height: 600px; }
+  @media (min-width: 1280px) {
+    .message_background {
+      width: 980px;
+      height: auto; } }
+.message_us {
+  display: flex;
+  flex-direction: column; }
+
+.name {
+  margin-bottom: 24px;
+  padding-left: 8px; }
+  @media (min-width: 1280px) {
+    .name {
+      margin-left: 270px;
+      margin-right: 270px; } }
+.email {
+  margin-bottom: 24px;
+  padding-left: 8px; }
+  @media (min-width: 1280px) {
+    .email {
+      margin-left: 270px;
+      margin-right: 270px; } }
+.phone {
+  margin-bottom: 24px;
+  padding-left: 8px; }
+  @media (min-width: 1280px) {
+    .phone {
+      margin-left: 270px;
+      margin-right: 270px; } }
+.message {
+  margin-bottom: 24px;
+  padding-top: 8px;
+  padding-left: 8px;
+  padding-bottom: 250px; }
+  @media (min-width: 1280px) {
+    .message {
+      margin-left: 270px;
+      margin-right: 270px; } }
+.submit_mu {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  padding: 6px 22px;
+  width: 100px;
+  height: 32px;
+  background: #FFECA8;
+  color: #1E4648;
+  margin: 0 auto; }
+  @media (min-width: 1280px) {
+    .submit_mu {
+      width: 220px;
+      height: 64px;
+      font-size: 24px;
+      padding: 14px; } }
 .contact_cards {
   display: flex;
   flex-direction: column;
   align-items: center; }
-
+  @media (min-width: 1280px) {
+    .contact_cards {
+      display: flex;
+      flex-direction: row;
+      justify-content: center; } }
 .hours_bg {
   background: #4E7276;
   width: 290px;
+  height: 350px;
   padding: 20px;
   margin-top: 40px; }
-
+  @media (min-width: 1280px) {
+    .hours_bg {
+      margin-left: 40px;
+      margin-right: 40px; } }
 .hours_card {
   display: flexbox;
   flex-direction: row;
@@ -714,37 +853,46 @@ h3, h4, h5, h6 {
   width: 220px;
   height: 240px;
   background: #F7F9EE;
-  margin: 0 auto; }
+  margin: 40px 16px; }
   @media (min-width: 1280px) {
     .hours_card {
       width: 225px;
-      height: auto; } }
+      height: 250px; } }
 .touch_bg {
   background: #4E7276;
   width: 290px;
+  height: 350px;
   padding: 20px;
   margin-top: 40px; }
-
+  @media (min-width: 1280px) {
+    .touch_bg {
+      margin-left: 40px;
+      margin-right: 40px; } }
 .touch_card {
   display: flexbox;
   flex-direction: row;
   text-align: center;
+  line-height: .5;
   justify-content: center;
   padding: 15px 24px;
   width: 220px;
   height: 240px;
   background: #F7F9EE;
-  margin: 0 auto; }
+  margin: 40px 16px; }
   @media (min-width: 1280px) {
     .touch_card {
       width: 225px;
-      height: auto; } }
+      height: 250px; } }
 .visit_bg {
   background: #4E7276;
   width: 290px;
+  height: 350px;
   padding: 20px;
   margin-top: 40px; }
-
+  @media (min-width: 1280px) {
+    .visit_bg {
+      margin-left: 40px;
+      margin-right: 40px; } }
 .visit_card {
   display: flexbox;
   flex-direction: row;
@@ -754,11 +902,16 @@ h3, h4, h5, h6 {
   width: 220px;
   height: 240px;
   background: #F7F9EE;
-  margin: 0 auto; }
+  margin: 40px 16px; }
   @media (min-width: 1280px) {
     .visit_card {
       width: 225px;
-      height: auto; } }
+      height: 250px; } }
+.contact_bottom {
+  display: flex;
+  flex-direction: column;
+  align-items: center; }
+
 .location_text {
   text-align: center;
   letter-spacing: 0.05em;
@@ -767,18 +920,22 @@ h3, h4, h5, h6 {
   line-height: 150%;
   margin: 0 auto;
   padding-top: 64px; }
-
-.contact_bottom {
-  display: flex;
-  flex-direction: column; }
-
+  @media (min-width: 1280px) {
+    .location_text {
+      font-size: 36px; } }
 .map_image {
-  display: flexbox;
-  justify-content: space-between;
-  text-align: center;
-  width: 350px;
-  height: auto; }
-
+  width: 400px;
+  padding: 32px; }
+  @media (min-width: 834px) {
+    .map_image {
+      width: 635px; } }
+  @media (min-width: 1280px) {
+    .map_image {
+      width: 835px; } }
 .leaf_image {
-  width: 350px;
-  height: auto; }
+  width: 400px;
+  padding: 32px; }
+  @media (min-width: 834px) {
+    .leaf_image {
+      width: 100%;
+      max-width: 635px; } }
