--- a/assignments/final/dev/scss/components/_contact_bottom.scss
+++ b/assignments/final/dev/scss/components/_contact_bottom.scss
@@ -1,3 +1,8 @@
+.contact_bottom {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 .location_text {
     text-align: center;
     letter-spacing: 0.05em; 
@@ -6,19 +11,25 @@
     line-height: 150%;
     margin:0 auto;
     padding-top: 64px;
-}
-.contact_bottom {
-    display: flex;
-    flex-direction: column;
+    @include lg {
+        font-size: 36px;
+    }
 }
 .map_image {
-    display: flexbox;
-    justify-content: space-between;
-    text-align: center;
-    width: 350px;
-    height: auto;
+    width: 400px;
+    padding: 32px;
+    @include md {
+        width: 635px
+    }
+    @include lg {
+        width: 835px;
+    }
 }
 .leaf_image {
-    width: 350px;
-    height: auto;
+    width: 400px;
+    padding: 32px;
+    @include md {
+        width: 100%;
+        max-width: 635px;
+    }
 }
