--- a/assignments/final/dev/scss/components/_contact_cards.scss
+++ b/assignments/final/dev/scss/components/_contact_cards.scss
@@ -2,12 +2,22 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    @include lg {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+    }
 }
 .hours_bg {
     background: $dark-electric-blue;
     width: 290px;
+    height:350px;
     padding: 20px;
     margin-top: 40px;
+    @include lg {
+        margin-left: 40px;
+        margin-right:40px;
+    }
 }
 .hours_card {
     display:flexbox;
@@ -18,38 +28,49 @@
     width: 220px;
     height: 240px;
     background: $cultured;
-    margin: 0 auto;
+    margin: 40px 16px;
     @include lg {
         width: 225px;
-        height: auto;
+        height: 250px;
     }
 }
 .touch_bg {
     background: $dark-electric-blue;
     width: 290px;
+    height:350px;
     padding: 20px;
     margin-top: 40px;
+    @include lg {
+        margin-left: 40px;
+        margin-right:40px;
+    }
 }
 .touch_card {
     display:flexbox;
     flex-direction:row;
     text-align: center;
+    line-height: .5;
     justify-content: center;
     padding: 15px 24px;
     width: 220px;
     height: 240px;
     background: $cultured;
-    margin: 0 auto;
+    margin: 40px 16px;
     @include lg {
         width: 225px;
-        height: auto;
+        height: 250px;
     }
 }
 .visit_bg {
     background: $dark-electric-blue;
     width: 290px;
+    height:350px;
     padding: 20px;
     margin-top: 40px;
+    @include lg {
+        margin-left: 40px;
+        margin-right:40px;
+    }
 }
 .visit_card {
     display:flexbox;
@@ -60,9 +81,9 @@
     width: 220px;
     height: 240px;
     background: $cultured;
-    margin: 0 auto;
+    margin: 40px 16px;
     @include lg {
         width: 225px;
-        height: auto;
+        height: 250px;
     }
 }
