--- a/assignments/final/dev/scss/components/_hero.scss
+++ b/assignments/final/dev/scss/components/_hero.scss
@@ -46,9 +46,11 @@
     display:flex;
     flex-direction:row;
     justify-content: center;
-    padding: 15px 24px;
+    padding: 10px 24px;
     width: 192px;
     height: 56px;
+    color: $japanese-indigo; 
+    font-size: 24px; 
     background: $rite-of-spring;
     margin: 0 auto;
     @include lg {
