--- a/assignments/final/dev/scss/components/_main-content.scss
+++ b/assignments/final/dev/scss/components/_main-content.scss
@@ -4,6 +4,7 @@
 .second_bg {
     background: $cultured;
     padding-bottom: 20px; 
+    margin-bottom: 64px;
 }
 .looking_for {
     text-align: center;
@@ -38,6 +39,8 @@
   -ms-transform: translate(-50%, -50%);
   background-color: $rite-of-spring;
   padding: 12px 24px;
+  color: $japanese-indigo;
+  font-size: 24px;
 }
 .story_container {
     position: relative;
@@ -56,6 +59,8 @@
   -ms-transform: translate(-50%, -50%);
   background-color: $rite-of-spring;
   padding: 12px 18px;
+  color: $japanese-indigo;
+  font-size: 24px;
 }
 .resources_container {
     position: relative;
@@ -74,6 +79,8 @@
   -ms-transform: translate(-50%, -50%);
   background-color: $rite-of-spring;
   padding: 12px 24px;
+  color: $japanese-indigo;
+  font-size: 24px;
 }
 .contact_container {
     position: relative;
@@ -92,6 +99,8 @@
   -ms-transform: translate(-50%, -50%);
   background-color: $rite-of-spring;
   padding: 12px 24px;
+  color: $japanese-indigo;
+  font-size: 24px;
 }
 .questions {
     text-align: center;
@@ -154,6 +163,41 @@
     margin-right: auto;
     width: 360px;
     height: auto;
+    @include lg {
+        display:none;
+    }
+}
+.white_flower {
+    @include lg {
+        width: 460px;
+        height: auto;
+        padding:16px;
+    }
+}
+.cafe_02 {
+    @include lg {
+        width: 460px;
+        height: auto;
+        padding:16px;
+    }
+}
+.lily_2{
+    @include lg {
+        width: 460px;
+        height: 460px;
+        padding:16px;
+     }
+}
+    
+.triple_image {
+    @include sm {
+        display: none;
+    }
+    @include lg {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+    }
 }
 .bottom_body {
     text-align: justify;
@@ -168,11 +212,13 @@
     display:flex;
     flex-direction:row;
     justify-content: center;
-    padding: 15px 24px;
+    padding: 10px 24px;
     width: 192px;
     height: 56px;
     background: $rite-of-spring;
     margin: 0 auto;
+    color: $japanese-indigo;
+  font-size: 24px;
     @include lg {
         width: 225px;
         height: auto;
