--- a/assignments/final/dev/scss/components/_main-content.scss
+++ b/assignments/final/dev/scss/components/_main-content.scss
@@ -168,6 +168,8 @@
     }
 }
 .white_flower {
+    width: 170px;
+    height: auto;
     @include lg {
         width: 460px;
         height: auto;
@@ -175,6 +177,8 @@
     }
 }
 .cafe_02 {
+    width: 170px;
+    height: auto;
     @include lg {
         width: 460px;
         height: auto;
