--- a/assignments/final/dev/scss/styles.scss
+++ b/assignments/final/dev/scss/styles.scss
@@ -18,3 +18,5 @@
 @import 'components/_message_us.scss';
 @import 'components/contact_cards';
 @import 'components/contact_bottom';
+@import 'components/_cafe_hero.scss';
+@import 'components/_cafe_main.scss';
