--- a/assignments/final/dev/scss/components/_hero.scss
+++ b/assignments/final/dev/scss/components/_hero.scss
@@ -6,14 +6,14 @@
     font-weight: 300;
     padding-top: 72px;
     padding-bottom: 24px;
-    @media screen and (min-width: 768px) {
+    @include md{
         font-size: 24px;}
 }
 .vault_vine {
     font-size: 36px;
     font-weight: 500;
-    line-height: 130.4%;
-    @media screen and (min-width: 1280px) {
+    line-height: 130%;
+    @include lg  {
         font-size: 72px;}
 } 
 .body_copy {
@@ -24,7 +24,7 @@
     font-weight: 300;
     line-height: 150%;
     margin:0 auto;
-    @include lg(){
+    @include lg {
         font-size: 18px;
     }
 }
