--- a/assignments/final/dev/scss/components/_message_us.scss
+++ b/assignments/final/dev/scss/components/_message_us.scss
@@ -4,69 +4,87 @@
     align-items: center;
     padding-top: 64px;
 }
+
 .message_title {
     text-align: center;
     padding: 32px;
     font-weight: 300;
 }
+
 .message_background {
     background: $cultured;
     padding: 16px;
     width: 360px;
     height: 600px;
+
     @include lg {
         width: 980px;
         height: auto;
     }
 }
+
 .message_us {
     display: flex;
     flex-direction: column;
 }
+
 .name {
     margin-bottom: 24px;
     padding-left: 8px;
+
     @include lg {
         margin-left: 270px;
-        margin-right: 270px;}
+        margin-right: 270px;
+    }
 }
+
 .email {
     margin-bottom: 24px;
     padding-left: 8px;
+
     @include lg {
         margin-left: 270px;
-        margin-right: 270px;}
+        margin-right: 270px;
+    }
 }
+
 .phone {
     margin-bottom: 24px;
     padding-left: 8px;
+
     @include lg {
         margin-left: 270px;
-        margin-right: 270px;}
+        margin-right: 270px;
+    }
 }
+
 .message {
     margin-bottom: 24px;
     padding-top: 8px;
     padding-left: 8px;
     padding-bottom: 250px;
+
     @include lg {
         margin-left: 270px;
-        margin-right: 270px;}
+        margin-right: 270px;
+    }
 }
+
 .submit_mu {
-    display:flex;
-    flex-direction:row;
+    display: flex;
+    flex-direction: row;
     justify-content: center;
-    padding: 6px 22px;
+    padding: 5px 22px;
     width: 100px;
     height: 32px;
     background: $rite-of-spring;
     color: $japanese-indigo;
     margin: 0 auto;
+
     @include lg {
         width: 220px;
         height: 64px;
         font-size: 24px;
-        padding:14px;
+        padding: 14px;
     }
 }
