--- a/assignments/final/dev/scss/components/_cafe_hero.scss
+++ b/assignments/final/dev/scss/components/_cafe_hero.scss
@@ -15,5 +15,29 @@
 
 .hero_cafe {
     width: 100%;
-    height: auto
+    height: auto;
+
+    @include lg {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        width: 100%;
+        height: auto;
+        max-width: 824px;
+    }
+}
+
+.cafe_title {
+    display: none;
+
+    @include md {
+        display: block;
+        text-align: center;
+        padding-top: 48px;
+        font-weight: 500;
+    }
+
+    @include lg {
+        font-size: 72px;
+    }
 }
